update url in Git

--- a/eFlow/eFlow.html
+++ b/eFlow/eFlow.html
@@ -1,1 +1,1 @@
-<a href="itms-services://?action=download-manifest&url=https://10.210.10.20/apps/manifest.plist">Install App</a>
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">Install App</a>
