--- a/eFlow/eFlow.html
+++ b/eFlow/eFlow.html
@@ -1,1 +1,10 @@
-<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">Install App</a>
+<html>
+	<body>
+		<a style="font-size:800%" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
+		Install App
+		</a>
+		<br />
+		<p style="font-size:300%">點擊以上鏈接，選擇<b color="red">“安裝”</b>，即可更新eFlow。
+		</p>
+	</body>
+</html>
