--- a/eFlow/eFlow.html
+++ b/eFlow/eFlow.html
@@ -1,10 +1,18 @@
 <html>
 	<body>
-		<a style="font-size:800%" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
-		Install App
-		</a>
-		<br />
-		<p style="font-size:300%">點擊以上鏈接，選擇<b color="red">“安裝”</b>，即可更新eFlow。
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<div style="text-align:center;font-size:400%">
+		<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
+		<img src="eFlow.install.png"></a>
+		<br/>
+		<a style="" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
+		Install eFlow</a>
+		</div>
+		<br/>
+		<p style="text-align:center;font-size:300%">點擊以上鏈接，選擇<b color="red">“安裝”</b>，即可更新程式。
 		</p>
 	</body>
 </html>
