--- a/eFlow/eFlow.html
+++ b/eFlow/eFlow.html
@@ -6,7 +6,7 @@
 		<br/>
 		<div style="text-align:center;font-size:400%">
 		<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
-		<img src="eFlow.install.png"></a>
+		<img src="https://github.com/Honest-Liar/iOSRepo/raw/master/eFlow/eflow.install.png"></a>
 		<br/>
 		<a style="" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Honest-Liar/iOSRepo/master/eFlow/manifest.plist">
 		Install eFlow</a>
